# tracegrade

./: .gitignore  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: ci.yml
action/: action.yml
apps/api/: Dockerfile  pyproject.toml
apps/api/src/tracegrade_api/: auth.py  config.py  db.py  main.py  models.py  schemas.py
apps/api/src/tracegrade_api/ingest/: buffer.py  router.py
apps/api/src/tracegrade_api/routes/: annotations.py  evals.py  sessions.py  traces.py
apps/web/: Dockerfile  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/app/api/proxy/[...path]/: route.ts
apps/web/app/evals/: page.tsx
apps/web/app/evals/[id]/: page.tsx
apps/web/app/runs/: page.tsx
apps/web/app/sessions/: page.tsx
apps/web/app/sessions/[id]/: annotate-panel.tsx  page.tsx  span-tree.tsx
apps/web/lib/: api.ts
apps/worker/: Dockerfile  pyproject.toml
apps/worker/src/tracegrade_worker/: config.py  main.py  runner.py  synthesis.py
examples/raw-anthropic-sdk/: agent.py  tracegrade.yaml
migrations/clickhouse/: 001_initial.sql
migrations/postgres/: 001_initial.sql
