[project]
name = "tracegrade"
version = "0.1.0"
description = "Open-source tool that turns production AI agent failures into regression tests automatically"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"

[tool.uv.workspace]
members = ["apps/api", "apps/worker", "packages/cli", "packages/sdk-python", "packages/graders"]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["apps/api/tests", "apps/worker/tests", "packages/cli/tests", "packages/graders/tests"]
