[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tracegrade-api"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg",
    "clickhouse-connect",
    "redis[hiredis]",
    "arq",
    "opentelemetry-api",
    "opentelemetry-sdk",
    "python-jose[cryptography]",
    "passlib[bcrypt]",
    "httpx",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
]

[tool.hatch.build.targets.wheel]
packages = ["src/tracegrade_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
